--- a/src/css_3.html
+++ b/src/css_3.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/css_2.css" />
+		<link rel="stylesheet" type="text/css" href="css/css_3.css" />
 	</head>
 	<body>
-		<div id="profile-image" style="float: right;">
+		<div id="profile-image">
+		</div>
+		<div id="nav-bar">
+			<ul>
+				<li><a href="#">Item 1</a></li>
+				<li><a href="#">Item 3</a></li>
+				<li><a href="#">Item 3</a></li>
+				<li><a href="#">Item 4</a></li>
+				<li><a href="#">Item 5</a></li>
+			</ul>
 		</div>
 		<div class="full-width-image">
 			<img src="images/introduction-image.png" alt="Introduction header image" width="50%"/>
