--- a/src/final/index.html
+++ b/src/final/index.html
@@ -14,6 +14,15 @@
 				</ul>
 			</div>
 		</div>
+		<div id="header">
+			<div id="profile">
+				<img src="img/header-image.jpg" alt="Welcome" />
+				<div id="profile-image"
+					<img src="img/headshot.jpg" alt="head shot" />
+				</div>
+				<h2>Dave Russell</h2>
+			</div>
+		</div>
 		<div id="introduction">
 			<h1>How to build a website</h1>
 			<p>This website contains a reference to everything I know about HTML, 
