fixheader with profile

--- a/src/final/index.html
+++ b/src/final/index.html
@@ -16,8 +16,8 @@
 		</div>
 		<div id="header">
 			<div id="profile">
-				<img src="img/header-image.jpg" alt="Welcome" />
-				<div id="profile-image"
+				<img src="img/header-image.png" alt="Welcome" />
+				<div id="profile-image">
 					<img src="img/headshot.jpg" alt="head shot" />
 				</div>
 				<h2>Dave Russell</h2>
