--- a/src/final/index.html
+++ b/src/final/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>How to build a website</title>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div id="navigation">
@@ -16,7 +17,6 @@
 		</div>
 		<div id="header">
 			<div id="profile">
-				<img src="img/header-image.png" alt="Welcome" />
 				<div id="profile-image">
 					<img src="img/headshot.jpg" alt="head shot" />
 				</div>
