create html.html page with new sections and stub for script

--- a/src/final/index.html
+++ b/src/final/index.html
@@ -8,7 +8,7 @@
 		<div id="navigation">
 			<div id="navigation-inside">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html" class="active">Home</a></li>
 					<li><a href="html.html">HTML</a></li>
 					<li><a href="css.html">CSS</a></li>
 					<li><a href="javascript.html">JavaScript</a></li>
@@ -23,14 +23,29 @@
 				<h2>Dave Russell</h2>
 			</div>
 		</div>
-		<div id="introduction">
-			<h1>How to build a website</h1>
-			<p>This website contains a reference to everything I know about HTML, 
-			CSS and Javascript. Each language is contained in it's own seperate
-			block. Use the main navigation and then the jump list to navigate
-			straight to any section of the webpage.
+		<div id="introduction" class="section">
+			<h1>Web Design</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tortor massa, 
+			consectetur vel risus sit amet, rutrum fermentum augue. Suspendisse vel ante ac nibh 
+			porta porttitor. Donec varius sapien nec sollicitudin ultrices. Suspendisse fringilla 
+			lectus id tincidunt sollicitudin. Pellentesque habitant morbi tristique senectus et 
+			netus et malesuada fames ac turpis egestas. Sed hendrerit quam et accumsan tincidunt. 
+			Etiam commodo, augue sed facilisis condimentum, ante tellus luctus metus, sit amet 
+			placerat sapien massa vitae tortor. Nullam sed mauris venenatis, sodales lectus at, 
+			suscipitnulla. Duis eu vestibulum massa. Proin nec odio aliquam, mollis quam et, 
+			sollicitudin quam. Fusce mattis tellus eget mi suscipit pulvinar. Morbi et congue 
+			arcu. Maecenas consectetur blandit dictum. Vestibulum ligula neque, aliquam 
+			vitae quam id, sagittis hendrerit leo. Ut at faucibus augue. Morbi ornare purus a 
+			porta efficitur.
 			</p>
-
+			<p>Curabitur semper sed velit sed suscipit. Pellentesque diam libero, pretium ac 
+			tincidunt vehicula, sollicitudin ac orci. Integer ut volutpat orci. Vivamus pharetra 
+			mauris vitae dolor interdum, ac scelerisque arcu sagittis. Curabitur venenatis, lacus 
+			a lobortis volutpat, ante justo dapibus sapien, ac pharetra enim quam semper mi. Sed 
+			libero ante, posuere in est eget, aliquam facilisis odio. In et faucibus nisl. 
+			Vivamus tristique arcu eget nulla efficitur porttitor. Fusce nec justo enim. Maecenas 
+			vel tortor at ligula ultricies imperdiet at sed enim. Maecenas vesti
+			</p>
 		</div>
 	</body>
 </html>
