--- a/src/confident_web_design/final/html.html
+++ b/src/confident_web_design/final/html.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>How to build a website - HTML</title>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.min.css" />
 		<script src="js/main.js"></script>
 	</head>
 	<body>
