--- a/src/confident_web_design/final/index.html
+++ b/src/confident_web_design/final/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>How to build a website</title>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.min.css" />
 	</head>
 	<body>
 		<div id="navigation">
