--- a/src/responsive_design/site/index.html
+++ b/src/responsive_design/site/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Demo</title>
 		<meta name="viewport" content="width=device-width, minimum-scle=1.0, maximum-scale=1.0">
-		<link href="css/main.css" type="text/css" rel="stylesheet">
+		<link href="css/main.min.css" type="text/css" rel="stylesheet">
 		<!--[if lt IE 9]>
 			<script src="//html5hiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
